--- a/src/patternfly/components/Slider/slider-step.hbs
+++ b/src/patternfly/components/Slider/slider-step.hbs
@@ -1,5 +1,5 @@
 <div class="{{pfv}}slider__step{{#if slider-step--IsActive}} pf-m-active{{/if}}{{#if slider-step--modifier}} {{slider-step--modifier}}{{/if}}"
-  style="--pf-v6-c-slider__step--Left: {{slider-step--Left}};{{#if slider-step--styles}} {{slider-step--styles}}{{/if}}"
+  style="--pf-v6-c-slider__step--InsetInlineStart: {{slider-step--InsetInlineStart}};{{#if slider-step--styles}} {{slider-step--styles}}{{/if}}"
   {{#if slider-step--attribute}}
     {{{slider-step--attribute}}}
   {{/if}}>
