--- a/src/patternfly/components/Pagination/pagination.scss
+++ b/src/patternfly/components/Pagination/pagination.scss
@@ -19,7 +19,7 @@ $pf-v6-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
   // nav page select
   --#{$pagination}__nav-page-select--FontSize: var(--pf-t--global--font--size--body--default);
   --#{$pagination}__nav-page-select--ColumnGap: var(--pf-t--global--spacer--sm);
-  --#{$pagination}__nav-page-select--c-form-control--width-base: calc((var(--#{$form-control}--PaddingRight) + var(--#{$form-control}--PaddingLeft)) + (var(--#{$form-control}--before--BorderWidth) * 2));
+  --#{$pagination}__nav-page-select--c-form-control--width-base: calc((var(--#{$form-control}--PaddingInlineEnd) + var(--#{$form-control}--PaddingInlineStart)) + (var(--#{$form-control}--before--BorderWidth) * 2));
   --#{$pagination}__nav-page-select--c-form-control--width-chars: 2;
   --#{$pagination}__nav-page-select--c-form-control--Width: calc(var(--#{$pagination}__nav-page-select--c-form-control--width-base) + (var(--#{$pagination}__nav-page-select--c-form-control--width-chars) * 1ch));
 
@@ -31,19 +31,19 @@ $pf-v6-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
   // top
   --#{$pagination}--m-sticky--BackgroundColor: var(--pf-t--global--background--color--primary--default);
   --#{$pagination}--m-sticky--BoxShadow: var(--pf-t--global--box-shadow--sm--bottom);
-  --#{$pagination}--m-sticky--PaddingTop: var(--pf-t--global--spacer--md);
-  --#{$pagination}--m-sticky--PaddingRight: var(--pf-t--global--spacer--lg);
-  --#{$pagination}--m-sticky--PaddingBottom: var(--pf-t--global--spacer--md);
-  --#{$pagination}--m-sticky--PaddingLeft: var(--pf-t--global--spacer--lg);
+  --#{$pagination}--m-sticky--PaddingBlockStart: var(--pf-t--global--spacer--md);
+  --#{$pagination}--m-sticky--PaddingInlineEnd: var(--pf-t--global--spacer--lg);
+  --#{$pagination}--m-sticky--PaddingBlockEnd: var(--pf-t--global--spacer--md);
+  --#{$pagination}--m-sticky--PaddingInlineStart: var(--pf-t--global--spacer--lg);
   --#{$pagination}--m-sticky--ZIndex: 100; // TODO: replace with z-index token
-  --#{$pagination}--m-sticky--Top: 0;
+  --#{$pagination}--m-sticky--InsetBlockStart: 0;
 
   // bottom
   --#{$pagination}--m-bottom--BackgroundColor: var(--pf-t--global--background--color--primary--default);
   --#{$pagination}--m-bottom--BoxShadow: var(--pf-t--global--box-shadow--sm--top);
-  --#{$pagination}--m-bottom--Bottom: 0;
-  --#{$pagination}--m-bottom--PaddingRight: var(--pf-t--global--spacer--lg);
-  --#{$pagination}--m-bottom--PaddingLeft: var(--pf-t--global--spacer--lg);
+  --#{$pagination}--m-bottom--InsetBlockEnd: 0;
+  --#{$pagination}--m-bottom--PaddingInlineEnd: var(--pf-t--global--spacer--lg);
+  --#{$pagination}--m-bottom--PaddingInlineStart: var(--pf-t--global--spacer--lg);
   --#{$pagination}--m-bottom--m-sticky--BoxShadow: var(--pf-t--global--box-shadow--sm--top);
 
   // options menu
@@ -78,19 +78,19 @@ $pf-v6-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
 
   &.pf-m-bottom {
     --#{$pagination}--m-sticky--BoxShadow: var(--#{$pagination}--m-bottom--m-sticky--BoxShadow);
-    --#{$pagination}--m-sticky--Top: auto;
+    --#{$pagination}--m-sticky--InsetBlockStart: auto;
 
     position: sticky;
-    inset-block-end: var(--#{$pagination}--m-bottom--Bottom);
+    inset-block-end: var(--#{$pagination}--m-bottom--InsetBlockEnd);
     justify-content: center;
-    padding-inline-start: var(--#{$pagination}--m-bottom--PaddingLeft);
-    padding-inline-end: var(--#{$pagination}--m-bottom--PaddingRight);
+    padding-inline-start: var(--#{$pagination}--m-bottom--PaddingInlineStart);
+    padding-inline-end: var(--#{$pagination}--m-bottom--PaddingInlineEnd);
     background-color: var(--#{$pagination}--m-bottom--BackgroundColor);
     box-shadow: var(--#{$pagination}--m-bottom--BoxShadow);
 
     &.pf-m-static {
-      --#{$pagination}--m-bottom--MarginTop: 0;
-      --#{$pagination}--m-bottom--BorderTopWidth: 0;
+      --#{$pagination}--m-bottom--MarginBlockStart: 0;
+      --#{$pagination}--m-bottom--BorderBlockStartWidth: 0;
 
       position: relative;
       box-shadow: none;
@@ -114,9 +114,9 @@ $pf-v6-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
     }
 
     @media screen and (min-width: $pf-v6-global--breakpoint--md) {
-      --#{$pagination}--m-bottom--BorderTopWidth: 0;
-      --#{$pagination}--m-bottom--MarginTop: 0;
-      --#{$pagination}--m-bottom--Bottom: auto;
+      --#{$pagination}--m-bottom--BorderBlockStartWidth: 0;
+      --#{$pagination}--m-bottom--MarginBlockStart: 0;
+      --#{$pagination}--m-bottom--InsetBlockEnd: auto;
 
       position: relative;
       justify-content: flex-end;
@@ -143,15 +143,15 @@ $pf-v6-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
   }
 
   &.pf-m-sticky {
-    --#{$pagination}--m-bottom--Bottom: 0;
+    --#{$pagination}--m-bottom--InsetBlockEnd: 0;
 
     position: sticky;
-    inset-block-start: var(--#{$pagination}--m-sticky--Top);
+    inset-block-start: var(--#{$pagination}--m-sticky--InsetBlockStart);
     z-index: var(--#{$pagination}--m-sticky--ZIndex);
-    padding-block-start: var(--#{$pagination}--m-sticky--PaddingTop);
-    padding-block-end: var(--#{$pagination}--m-sticky--PaddingBottom);
-    padding-inline-start: var(--#{$pagination}--m-sticky--PaddingLeft);
-    padding-inline-end: var(--#{$pagination}--m-sticky--PaddingRight);
+    padding-block-start: var(--#{$pagination}--m-sticky--PaddingBlockStart);
+    padding-block-end: var(--#{$pagination}--m-sticky--PaddingBlockEnd);
+    padding-inline-start: var(--#{$pagination}--m-sticky--PaddingInlineStart);
+    padding-inline-end: var(--#{$pagination}--m-sticky--PaddingInlineEnd);
     background-color: var(--#{$pagination}--m-sticky--BackgroundColor);
     box-shadow: var(--#{$pagination}--m-sticky--BoxShadow);
   }
